<resources>
    <string name="app_name">Cook Together</string>
    <string name="etUsername">Usuario, correo electrónico</string>
    <string name="btLogin">Iniciar sesión</string>
    <string name="etPassword">Contraseña</string>
    <string name="tvRegister">Crear cuenta nueva</string>
    <string name="etUsernameRegister">Usuario</string>
    <string name="etCorreoRegister">Correo electrónico</string>
    <string name="etNombreRegister">Nombre</string>
    <string name="etApellidosRegister">Apellidos</string>
    <string name="btRegister">Registrarte</string>
    <string name="imgBtReturnRegister">Boton para volver al login</string>
    <string name="etConfirmarPasswordRegister">Confirmar contraseña</string>
    <string name="btPerfil">Perfil</string>
    <string name="btInicio">Inicio</string>
    <string name="btPublicar">Publicar</string>
    <string name="btBuscar">Buscar</string>
    <string name="etTituloReceta">Nombre de la receta</string>
    <string name="tvDescReceta">"Descripción "</string>
    <string name="tvIngr">Ingredientes</string>
    <string name="tvIntrReceta">Instrucciones</string>
    <string name="btCompartir">Compartir</string>
    <string name="btEditar">Editar</string>
    <string name="tbIntr">Ingredientes</string>
    <string name="tbInstrucciones">Instrucciones</string>
    <string name="tvEtPublicaciones">Publicaciones</string>
    <string name="chSesion">Recordar sesión</string>
    <string name="chCambiarPass">Cambiar constraseña</string>
    <string name="etOldPassword">Actual contraseña</string>
    <string name="etNewPassword">Nueva contraseña</string>
</resources>