<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:onClick="registrar"
    tools:context="views.RegisterActivity">


    <EditText
        android:id="@+id/etNombreRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etNombreRegister"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dorado"
        android:fontFamily="@font/amaranth"
        android:onClick="registrar"
        android:text="@string/btRegister"
        android:textColor="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <EditText
        android:id="@+id/etCorreoRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etCorreoRegister"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <EditText
        android:id="@+id/etUsernameRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etUsernameRegister"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <EditText
        android:id="@+id/etConfirmarPasswordRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etConfirmarPasswordRegister"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/etApellidosRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etApellidosRegister"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <ImageButton
        android:id="@+id/imgBtReturnRegister"
        android:layout_width="49dp"
        android:layout_height="52dp"
        android:background="@null"
        android:contentDescription="@string/imgBtReturnRegister"
        android:contextClickable="false"
        android:onClick="volverLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/returnnsesenta" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgUserRegister"
        android:layout_width="143dp"
        android:layout_height="146dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        app:srcCompat="@drawable/addimgeusuario"
        app:strokeColor="@color/dorado"
        app:strokeWidth="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>