<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="views.LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etUsername"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:background="@drawable/fondo_et_gris"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/plateado"
        android:textColorHint="@color/plateado"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="204dp"
        android:layout_height="28dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/tvRegister"
        android:textAlignment="center"
        android:textColor="@color/dorado"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667"
        tools:text="@string/tvRegister" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/dorado"
        android:text="@string/btLogin"
        android:textColor="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="215dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151"
        app:srcCompat="@drawable/logopngo" />
</androidx.constraintlayout.widget.ConstraintLayout>